--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,4 +7,10 @@ abc = ABC
 servername = app
 recoverpanic = true
 EnableErrorsRender = true // 输出错误
-AutoRender = true // 自动渲染 
+AutoRender = true // 自动渲染
+
+dbhost = localhost
+dbport = 3306
+dbuser = root
+dbpassword = root
+dbname = go_casbin
