done casbin and done session in redis

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -13,4 +13,9 @@ dbhost = localhost
 dbport = 3306
 dbuser = root
 dbpassword = root
-dbname = go_casbin
+dbname = casbin
+
+sessionon = true
+
+SessionProvider = redis
+sessionproviderconfig = 127.0.0.1:6379
